# pdf-extractor

./: README.md  pyproject.toml
src/pdf_extractor/: core.py  core_fast.py  filters.py  geometry.py  image_io.py  visualizer.py
tests/: test_core.py
