[project]
name = "pdf-extractor"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Y9244", email = "yusuke9244@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]
